refactor(tree): 重构树构建逻辑以提升性能
- 引入 Java 21 虚拟线程处理大规模数据构建
- 使用 BFS 算法替代迭代方式构建树形结构
- 应用 groupingByConcurrent 提升父节点映射效率
- 移除 Guava 和 Apache Commons 的部分依赖
- 优化空集合返回逻辑，使用 Collections.emptyList()
- 支持通过 parentId 参数指定根节点构建起点
- 利用 SequencedCollection 保证结果顺序性